Add god mode
Fixes ENG-175
